# gazebo_ros_playground

./: README.md
gbot_description/: CMakeLists.txt  package.xml
gbot_description/config/: gazebo_control.yaml
gbot_description/launch/: 3dof_planar_fakesim.launch  3dof_planar_gazebo.launch  sim.rviz
gbot_description/urdf/: 3dof_planar.transmission.xacro  3dof_planar.urdf.xacro  3dof_planar.xacro  3dof_planar_vel.transmission.xacro  3dof_planar_vel.urdf.xacro
gbot_hiqp/: CMakeLists.txt  log  package.xml
gbot_hiqp/config/: controllers.yaml  preload.yaml
gbot_hiqp/launch/: 3dof_hiqp.launch  3dof_hiqp_vel.launch
gbot_hiqp/scripts/: box_line_goal.sh  joints.sh  plane_point_joints.sh
ycb_object_models/: CMakeLists.txt  package.xml
ycb_object_models/models/urdf/: coke_can.urdf
