<?xml version="1.0"?>
<package>
  <name>ycb_object_models</name>
  <version>0.0.1</version>
  <description>Contains meshes and models of YCB objects for use in gazebo</description>

  <!-- One maintainer tag required --> 
  <!-- Package originally sourced from https://github.com/jontromanab/object_models.git --> 
  <maintainer email="todor.stoyanov@oru.se">Todor Stoyanov</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
